# rust-assignments

./: LICENSE  README.md
1-theory/: README.md
2-types/: README.md  request.json
2-types/part_1-2/: Cargo.toml
2-types/part_1-2/src/: main.rs  part_1.rs  part_2.rs
2-types/snippets-app/: Cargo.toml
2-types/snippets-app/src/: main.rs  snippets-app
