[package]
name = "part_1-2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
duration-str = "0.17.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_derive = "1.0.228"
serde_json = "1.0.145"
toml = { version = "0.9.7", features = ["serde"] }
url = {version = "2.5.7", features = ["serde"]}
uuid = {version = "1.18.1", features = ["serde"]}
